--- a/seaFood/css/sushi/header.css
+++ b/seaFood/css/sushi/header.css
@@ -32,13 +32,21 @@
         padding-top: 40px;
         }
 
-        /* .octoType2 h1:nth-child(odd) {
+        .octoType2 h1:nth-child(odd) {
             background-color: #f1f1f1;
         }
     
         .octoType2 h1:nth-child(even) {
             background-color: #ffff;
-        } */
+        }
+
+        .octo p:nth-child(even) {
+            background-color: #ffff;
+        }
+
+        .octo p:nth-child(odd) {
+            background-color: #f1f1f1;
+        }
 
 
         .octo3 h1 {
@@ -74,21 +82,6 @@
         font-weight: 600;
     }
     
-    .octoType1, .octoType2, .octoType3, .octoType4, .octoType5, .octoType6, .octoType7 {
-        display: flex;
-        font-size: 18px;
-        justify-content: center;
-        text-decoration: none;
-        position: relative;
-        top: 0;
-        width: 100vw;
-        height: auto;
-        flex-direction: column;
-        text-align: center;
-        /* background-color: #f1f1f1; */
-        padding-bottom: 50px;
-    }
-    
 
     .octoType1 h1, .octoType2 h1, .octoType3 h1, .octoType4 h1, .octoType5 h1, .octoType6 h1, .octoType7 h1 {
         display: flex;
@@ -107,6 +100,10 @@
         background-color: #ffff;
     }
 
+    .octo2 p:nth-child(even) {
+        background-color: #ffff;
+    }
+
     .octoType1 p, .octoType2 p, .octoType3 p, .octoType4 p, .octoType5 p, .octoType6 p, .octoType7 p {
         display: flex;
         font-size: 18px;
@@ -115,8 +112,10 @@
         position: relative;
         width: 100vw;
         padding-top: 20px;
-        padding-bottom: 20px;
+        padding-bottom: 40px;
+        padding-top: 50px;
     }
+    
 
     .octoType6 ul {
         display: flex;
@@ -136,7 +135,6 @@
     /* .octoType2 h1:nth-child(odd) {
         background-color:#f1f1f1;
     }
-
     .octoType2 h1:nth-child(even) {
         background-color:#ffff;
     } */
@@ -147,7 +145,7 @@
 
 
 
-    .tigerRoll, .crunchRoll, .rainbowRoll, .californiaRoll, .caterpillarRoll, .vegetableRoll, .SurfandTurfRoll, .volcanoRoll {
+    /* .tigerRoll, .crunchRoll, .rainbowRoll, .californiaRoll, .caterpillarRoll, .vegetableRoll, .SurfandTurfRoll, .volcanoRoll {
         display: flex;
         font-size: 18px;
         justify-content: center;
@@ -158,11 +156,11 @@
         height: auto;
         flex-direction: column;
         text-align: center;
-        /* background-color: #f1f1f1; */
+        background-color: #f1f1f1;
         padding-bottom: 50px;
-    }
+    } */
     
-    .PhiladelphiaRoll, .dynamiteRoll, .dragonRoll, .spicyTunaRoll, .SpiderRoll, .ShrimpTempuraRoll, .tempuraRoll {
+    /* .PhiladelphiaRoll, .dynamiteRoll, .dragonRoll, .spicyTunaRoll, .SpiderRoll, .ShrimpTempuraRoll, .tempuraRoll {
         display: flex;
         font-size: 18px;
         justify-content: center;
@@ -175,20 +173,20 @@
         text-align: center;
         background-color: #ffff;
         padding-bottom: 50px;
-    }
+    } */
 
     
-    .tigerRoll h1,.crunchRoll h1,.rainbowRoll h1,.californiaRoll h1,.caterpillarRoll h1,.vegetableRoll h1,.SurfandTurfRoll h1,.volcanoRoll h1{
+    /* .tigerRoll h1,.crunchRoll h1,.rainbowRoll h1,.californiaRoll h1,.caterpillarRoll h1,.vegetableRoll h1,.SurfandTurfRoll h1,.volcanoRoll h1{
         display: flex;
         font-size: 20px;
         justify-content: center;
         text-decoration: underline;
         width: 100vw;
         background-color: #f1f1f1;
-    }
+    } */
 
         /* .octoType3 h1:nth-child(odd)  */
-    .PhiladelphiaRoll h1,.dynamiteRoll h1,.dragonRoll h1,.spicyTunaRoll h1,.SpiderRoll h1,.ShrimpTempuraRoll h1,.tempuraRoll h1
+    /* .PhiladelphiaRoll h1,.dynamiteRoll h1,.dragonRoll h1,.spicyTunaRoll h1,.SpiderRoll h1,.ShrimpTempuraRoll h1,.tempuraRoll h1
     {
         display: flex;
         font-size: 20px;
@@ -196,9 +194,9 @@
         text-decoration: underline;
         width: 100vw;
         background-color: #ffff;
-    }
+    } */
     
-    .tigerRoll p, .crunchRoll p, .rainbowRoll p, .californiaRoll p, .caterpillarRoll p, .vegetableRoll p, .SurfandTurfRoll p, .volcanoRoll p{
+    /* .tigerRoll p, .crunchRoll p, .rainbowRoll p, .californiaRoll p, .caterpillarRoll p, .vegetableRoll p, .SurfandTurfRoll p, .volcanoRoll p{
         display: flex;
         font-size: 18px;
         justify-content: center;
@@ -208,9 +206,9 @@
         padding-top: 20px;
         padding-bottom: 30px;
         background-color: #f1f1f1;
-    }
+    } */
 
-    .philadelphiaRoll p, .dynamiteRoll p, .dragonRoll p, .spicyTunaRoll p, .spiderRoll p, .shrimpTempuraRoll p, .tempuraRoll p{
+    /* .philadelphiaRoll p, .dynamiteRoll p, .dragonRoll p, .spicyTunaRoll p, .spiderRoll p, .shrimpTempuraRoll p, .tempuraRoll p{
         display: flex;
         font-size: 18px;
         justify-content: center;
@@ -220,4 +218,7 @@
         padding-top: 20px;
         margin-bottom: 30px;
         background-color: #ffff;
-    }
+    } */
+
+    /* --------------------------------------------------------------------------------------------- */
+
