--- a/seaFood/css/fish/gallery.css
+++ b/seaFood/css/fish/gallery.css
@@ -12,13 +12,12 @@
     z-index: 1000;
 }
 
-/* ---------------------- slideshow---------------------------- */
+/* ------------------------------------------------- */
 
 * {box-sizing: border-box;}
 body {font-family: Verdana, sans-serif;}
 .mySlides {display: none;}
 img {vertical-align: middle;}
-
 
 
 
