--- a/seaFood/css/index/header.css
+++ b/seaFood/css/index/header.css
@@ -8,6 +8,26 @@
   font-family: 'Poppins', sans-serif;
 }
 
+/* * 
+{
+  scrollbar-width: thin;
+  scrollbar-color: rgba (150, 150, 150, 0.5) transparent;
+}
+
+*::-webkit-scrollbar {
+  width: 5px;
+}
+
+*::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: rgba (150, 150, 150, 0.5);
+  border-radius: 20px;
+  border: transparent;
+} */
+
 header
 {
   position: absolute;
